--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
 a{
     color: blue;
 }
+a:hover{
+    transform: scale(1.3);
+}
 .card{
     background-color: rgb(31, 30, 30);
 }
 .card-body>a{
     text-transform: uppercase;
+}
+.card-projects:hover{
+  transform: scale(1.1);
+  transition: transform 0.4s ease-in 0s ;
 }
 
 #scrollToTop{
@@ -15,3 +22,6 @@ a{
     z-index: 2;
     border-radius: 50%;
 }
+ img{
+     max-width: 450px;
+ }
